# contract2game

./: .gitignore  LICENSE  README.md  act2tree.py  act_ast.py  ast2smt.py  auction.sol  case_splitting.py  classifier.py  closing(2).act  closing_solidity(2).sol  dsl.py  flake.nix  handshake.json  input.py  parse_act.py  parse_act_2.py  parse_act_to_smt.py  pest.py  postprocessing.py  pyproject.toml  requirements.txt  state_tree.py  test_ex.json  test_ex_checkmate_input.json  test_ex_sefg1.json  text_ex.act  utility.py
act_examples/: negative-literals.act.typed.json
act_examples/smoke/: smoke.act.typed.json
act_examples/token/: transfer.act.typed.json
contract2game/: cli.py
contract2game/act2game/: state_tree.py
contract2game/act_py/: ast.py  parse.py
scripts/: gen-act-json.sh
