[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "act2game"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "z3-solver", "setuptools" ]

[tool.setuptools]
packages = ["contract2game", "contract2game.act_py", "contract2game.act2game"]

[project.scripts]
act2game = "contract2game.cli:main"
